# fintechfeed

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: sample_digest.json  sample_digest.md
src/fintechfeed/: __init__.py  cli.py  config.py  engine.py  history.py  llm.py  models.py  render.py  sentiment.py  tickers.py
src/fintechfeed/sources/: __init__.py  base.py  edgar.py  hackernews.py  reddit.py  rss.py
tests/: test_edgar.py  test_engine.py  test_history.py  test_render_config.py  test_sentiment.py  test_tickers.py
