[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintechfeed"
version = "0.1.0"
description = "A finance research agent that aggregates market chatter from free sources and scores sentiment per ticker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anish Khetani", email = "anishkhetani@gmail.com" }]
keywords = ["finance", "sentiment", "trading", "research", "agent", "fintwit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "feedparser>=6.0",
    "requests>=2.28",
    "PyYAML>=6.0",
    "rich>=13.0",
    "vaderSentiment>=3.3",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/anishkhetani/fintechfeed"
Repository = "https://github.com/anishkhetani/fintechfeed"

[project.scripts]
fintechfeed = "fintechfeed.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
